lower z-index to solve popover visibility issues

--- a/packages/wix-storybook-utils/src/LiveCodeExample/styles.global.scss
+++ b/packages/wix-storybook-utils/src/LiveCodeExample/styles.global.scss
@@ -5,7 +5,7 @@
   background-color: #f8fafb;
   color:#2e383c;
   line-height:1.2;
-  z-index: 1;
+  z-index: 0;
 }
 
 .cm-s-wsr .cm-comment { color:#898ea4; }
